--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-node_modules/
+# Ignore all files starting with the letter 'z'
+z*
+
+# Ignore .env file
+.env
+
+# Ignore top-level directory named artifacts
+/artifacts/
